--- a/src/Components/External.css
+++ b/src/Components/External.css
@@ -11,9 +11,31 @@
     } */
 }
 .bp3-navbar{
-  position: fixed;
+  position: fixed !important;
 }
 
+.bp3-overlay{
+  z-index: 1000 !important;
+}
+
+._sort_{
+  float: right;
+  position: absolute;
+  right: 5%;
+}
+
+._secondBlock_ {
+  margin-top: -150px !important;
+  z-index: 900 !important;
+  background-color: rgba(255, 255, 255, 0.945);
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.drawer_button{
+  z-index: 1000 !important;
+}
 
 @media (min-width: 600px) {
     .drawer_button {
